# triangle

./: README.md  pyproject.toml  setup.py
.github/workflows/: test.yml  wheels.yml
doc/plot/: PSLG.py  api_delaunay.py  api_triangulate.py  bndries.py  conforming_delaunay.py  conforming_delaunay1.py  constrained_conforming_delaunay.py  constrained_conforming_delaunay1.py  constrained_delaunay.py  constrained_delaunay1.py  convex_hull.py  delaunay.py  delaunay1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  face.py  holes_cavities.py  quality.py  quality1.py  quality2.py  refine.py  refine1.py  refine2.py  voronoi.py  voronoi1.py  voronoi3.py
tests/: test_triangle.py
triangle/: __init__.py  core.c  core.pyx  data.py  null_matplotlib.py  plot.py  tri.py  version.py
